# Papers

./: README.md
C/ghost_pointer/: Призрачный аргумент: как адрес функции пробрался в третий параметр.md
opengl/creating_window/: creating window.md
opengl/creating_window/source/create_window/: CMakeLists.txt
opengl/creating_window/source/create_window/lib/glad/include/glad/: glad.h
opengl/creating_window/source/create_window/lib/glad/src/: glad.c
opengl/creating_window/source/create_window/src/: main.cpp
